company name, sidebar

--- a/web/signUp.xhtml
+++ b/web/signUp.xhtml
@@ -11,7 +11,7 @@
     <h:body>
         <div class="grid">
             <header>
-                <h1>Company Name</h1>
+                <h1>LinkedU</h1>
             </header>
             <article>
                 <div class="box-login">
