sidebar/posting page

--- a/web/post.xhtml
+++ b/web/post.xhtml
@@ -4,14 +4,37 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Post</title>
-        <h:outputStylesheet library="css" name="post.css"/>
+                <h:outputStylesheet library="css" name="post.css"/>
 
     </h:head>
     <h:body>
-        <div class="grid">
-            
-            <header>Linked U Profile Post</header>
-        </div>
+ <div class="wrapper">
+  <div class="box header">Linked U User Post</div>
+  <br/>
+  <div class="box content">Hello
+  <br/>
+  from me
+  
+<br/>
+
+  
+  </div>
+        <br/>
+
+  <div class="box sidebar">
+      Home/featured
+      <br/>
+      <br/>
+      Search
+      <br/>
+      <br/>
+      Feed
+
+  </div>
+  <div class="box content">Content
+    <br /> More content than we had before so this column is now quite tall.</div>
+  <div class="box footer">Footer</div>
+</div>
         
     </h:body>
 </html>
