more post fixes

--- a/web/post.xhtml
+++ b/web/post.xhtml
@@ -31,8 +31,9 @@
       Feed
 
   </div>
-  <div class="box content">Content
-    <br /> More content than we had before so this column is now quite tall.</div>
+  <div class="box content" >Content
+    <br /> More content value="#{post.story}" </div>
+       
   <div class="box footer">Footer</div>
 </div>
         
