fixed button class

--- a/web/profile.xhtml
+++ b/web/profile.xhtml
@@ -19,7 +19,7 @@
                     <div class="content"> 
                         <h:inputText a:placeholder="Status: What are you thinking?"></h:inputText>
                     </div>
-                    <div content="button"> 
+                    <div class="button"> 
                         <h:commandButton value="Post"></h:commandButton>
                     </div>
                 </h:form>
