--- a/web/signUp.xhtml
+++ b/web/signUp.xhtml
@@ -75,7 +75,7 @@
                             <h:commandButton class="span-full" id="createAccount" value="Create Account" action="#{profileController.createProfile()}"/>
                         </h:form>
                         <h:form class="button-grid span-full" id="signUpForm-buttons" >
-                            <h:commandButton class="span-two" id="login-signUp" action="login.xhtml" value="Login" ></h:commandButton>
+                            <h:commandButton class="span-two" id="login-signUp" action="logIn.xhtml" value="Login" ></h:commandButton>
                         </h:form>  
                     </div>
                 </div>
