Home page added

--- a/web/contact.xhtml
+++ b/web/contact.xhtml
@@ -35,8 +35,8 @@
                         <nav>
                             <ul class="top_nav">
                                 <li><a href="index.xhtml">Home</a></li>
-                                <li><a href="#" class="active">About</a></li>
-                                <li><a href="contact.xhtml">Contact</a></li>
+                                <li><a href="about.xhtml">About</a></li>
+                                <li><a href="#" class="active">Contact</a></li>
                                 <li><a data-toggle="modal" data-target="#loginModal">Login</a></li>
 
                             </ul>
@@ -48,18 +48,16 @@
 
         <div class="box"><br/>
             <center><h3>LinkedU, is a web-based "LinkedIn app for high schoolers to link to universities and peers."</h3>
-            <br/><p style="text-align: center; margin-left: 150px; margin-right: 150px;">It helps high school students from anywhere who are looking for a easy and effective way to 
-                    promote themselves to the university communities. It also helps university recruiters who 
-                    are looking for talented students with high academic standards and/or athletic abilities. 
-                    The state of the current college admission process is still an antiquated way of applying for
-                    admission (from the students' perspective) and recruiting for qualified, talented, and 
-                    interested students (from the recruiters' perspective). Imagine how a more competitive 
-                    landscape (it is getting that way!) where a high student can simply go to LinkedU and 
-                    provide all the necessary info (e.g., ACT, SAT, PSAT/NMSQT scores, an essay of choice, 
-                    universities of choice, majors of choice, mixtapes of activities (e.g., basketball moves, 
-                    musical performances, etc.), etc.) and let the process takes its course. Now, the recruiters 
-                    can go to LinkedU and scour the candidates for ones who match their targets. They can then 
-                    attempt to woo the students with scholarships, promotional materials, etc.</p></center>
+            <br/><h4>Contact Information</h4>
+            <br/><p>
+                <ul>
+                    <li><b>Akanksha Tapadia: </b><br/>atapadi@ilstu.edu</li><br/>
+                    <li><b>Eric Zumbahlen: </b><br/>ejzumba@ilstu.edu</li><br/>
+                    <li><b>Dryden Steele: </b><br/>dsteel2@ilstu.edu</li><br/>
+                    <li><b>Ricky Laskowski: </b><br/>rllask1@ilstu.edu</li><br/>
+                    
+                </ul>
+            </p></center>
         <br/>
 <br/><br/><br/>
         </div>
