--- a/web/details.xhtml
+++ b/web/details.xhtml
@@ -19,7 +19,7 @@
                 <h:form style="width: auto">
                     <p:growl id="growl" sticky="true" showDetail="true"/>
 
-                    <p:wizard flowListener="#{signupController.studentController.onFlowProcess}">
+                    <p:wizard flowListener="#{studentController.onFlowProcess}">
 
                         <p:tab id="personal" title="Personal">
                             <p:panel header="Personal Details" style="width:auto; text-align: center">
