--- a/web/SearchResults.xhtml
+++ b/web/SearchResults.xhtml
@@ -7,8 +7,8 @@
         <title>search results</title>
     </h:head>
     <h:body>
-        <p:dataList value="#{searchController.results}" var="profile" >
-            #{profile.toString()}
+        <p:dataList value="#{searchController.results}" var="user" >
+            #{user.toString()}
         </p:dataList>
     </h:body>
 </html>
