--- a/web/forgotPassword.xhtml
+++ b/web/forgotPassword.xhtml
@@ -5,8 +5,7 @@
 <h:head>
         <title></title>
         <h:outputStylesheet library="css" name="signup.css"/>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <h:outputScript library="script" name="signup.js"/>   
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  
     </h:head>
     <h:body>
         <div class="grid">
@@ -21,8 +20,8 @@
                   
                     <div class="box-login-form">
                         <h:form id="loginForm"> 
-                            <h:inputText pt:placeholder="Enter Username" class="span-full" value="#{loginController.theModel.userId}"/>
-                            <h:commandButton value="Submit" class="span-full" id="forgotPassword-login" action="#{profileController.forgotPassword(loginController.theModel.userId)}"></h:commandButton>
+                            <h:inputText pt:placeholder="Enter Username" class="span-full" value="#{loginController.userController.userModel.username}"/>
+                            <h:commandButton value="Submit" class="span-full" id="forgotPassword-login" action="#{loginController.userController.selectUserByUsername()}"></h:commandButton>
                         </h:form>   
                     </div>
                 </div>
