--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -105,7 +105,7 @@
 
                                             <div class="col-md-4" style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
 
-                                                <a href="signUp.xhtml">
+                                                <a href="forgotPassword.xhtml">
                                                     <u> Forgot Password? </u>
                                                 </a>
                                             </div>
