work on forget password

--- a/web/forgotPassword.xhtml
+++ b/web/forgotPassword.xhtml
@@ -20,8 +20,8 @@
                   
                     <div class="box-login-form">
                         <h:form id="loginForm"> 
-                            <h:inputText pt:placeholder="Enter Username" class="span-full" value="#{loginController.userController.userModel.username}"/>
-                            <h:commandButton value="Submit" class="span-full" id="forgotPassword-login" action="#{loginController.userController.selectUserByUsername()}"></h:commandButton>
+                            <h:inputText pt:placeholder="Enter Username" class="span-full" value="#{passwordResetController.userModel.username}"/>
+                            <h:commandButton value="Submit" class="span-full" id="forgotPassword-login" action="#{passwordResetController.selectUserByUsername()}"></h:commandButton>
                         </h:form>   
                     </div>
                 </div>
