Logout implemented. Update in the works

--- a/web/profile.xhtml
+++ b/web/profile.xhtml
@@ -75,10 +75,10 @@
                     <h:commandButton  id="feed" class="sidebarbutton" action="feed?faces-redirect=true" value="Feed" ></h:commandButton>
                     <br/>
                     <br/>
-                    <h:commandButton  id="details" class="sidebarbutton" action="details?faces-redirect=true" value="My Details" ></h:commandButton>
+                    <h:commandButton  id="details" class="sidebarbutton" action="update.xhtml?faces-redirect=true" value="My Details" ></h:commandButton>
                     <br/>
                     <br/>
-                    <h:commandButton  id="logOut" class="sidebarbutton" action="details?faces-redirect=true" value="Log Out" ></h:commandButton>
+                    <h:commandButton  id="logOut" class="sidebarbutton" action="logOut.xhtml?faces-redirect=true" value="Log Out" ></h:commandButton>
                     <br/>
                     <br/>
                     <b><i>Featured College:
