--- a/web/update.xhtml
+++ b/web/update.xhtml
@@ -56,10 +56,10 @@
                                     <p:inputText value="#{updateController.studentBean.country}" />
 
                                     <h:outputText value="Postal Code: " />
-                                    <p:inputText value="#{updateController.studentBean.postalCode}" />
+                                    <p:inputText value="#{updateController.studentBean.zipcode}" />
 
                                     <h:outputText value="Phone #: " />
-                                    <p:inputText value="#{updateController.studentBean.phoneNo}"/>
+                                    <p:inputText value="#{updateController.studentBean.phone}"/>
 
                                     <h:outputText value="Skip to last: " />
                                     <h:selectBooleanCheckbox value="#{updateController.skip}" />
@@ -72,19 +72,19 @@
                                 <p:messages />
                                 <h:panelGrid columns="2" columnClasses="label, value" style="width:auto; text-align: center">
                                     <h:outputText value="High School *" />
-                                    <p:inputText value="#{updateController.studentBean.schoolName}" required="true" label="HighSchool"/>
+                                    <p:inputText value="#{updateController.studentBean.school}" required="true" label="HighSchool"/>
 
                                     <h:outputText value="End Year: " />
                                     <p:inputText value="#{updateController.studentBean.endYear}"/>
 
                                     <h:outputText value="SAT Score " />
-                                    <p:inputText value="#{updateController.studentBean.SAT}"/>
+                                    <p:inputText value="#{updateController.studentBean.sat}"/>
 
                                     <h:outputText value="PSAT Score " />
-                                    <p:inputText value="#{updateController.studentBean.PSAT}"/>
+                                    <p:inputText value="#{updateController.studentBean.psat}"/>
 
                                     <h:outputText value="ACT Score " />
-                                    <p:inputText value="#{updateController.studentBean.ACT}"/>
+                                    <p:inputText value="#{updateController.studentBean.act}"/>
 
                                     <h:outputText value="Certifications " />
                                     <p:inputText value="#{updateController.studentBean.certification}"/>
@@ -93,13 +93,13 @@
                                     <p:inputText value="#{updateController.studentBean.hobbies}"/>
 
                                     <h:outputText value="Essay of Choice " />
-                                    <p:inputText value="#{updateController.studentBean.essayOfChoice}"/>
+                                    <p:inputText value="#{updateController.studentBean.essay}"/>
 
                                     <h:outputText value="Universities of Choice" />
-                                    <p:inputText value="#{updateController.studentBean.universitiesOfChoice}"/>
+                                    <p:inputText value="Not Implemented"/>
 
                                     <h:outputText value="Majors of Choice " />
-                                    <p:inputText value="#{updateController.studentBean.majorsOfChoice}"/>
+                                    <p:inputText value="Not implemented"/>
                                 </h:panelGrid>
 
                             </p:panel>
@@ -130,27 +130,27 @@
                                         <h:outputText value="#{updateController.studentBean.country}" styleClass="outputLabel"/>
                                         
                                         <h:outputText value="Postal_Code: " />
-                                        <h:outputText value="#{updateController.studentBean.postalCode}" styleClass="outputLabel"/>
+                                        <h:outputText value="#{updateController.studentBean.zipcode}" styleClass="outputLabel"/>
 
                                         <h:outputText value="Phone_No: " />
-                                        <h:outputText value="#{updateController.studentBean.phoneNo}" styleClass="outputLabel"/>
+                                        <h:outputText value="#{updateController.studentBean.phone}" styleClass="outputLabel"/>
                                     </h:panelGrid>
 
                                     <h:panelGrid columns="2" columnClasses="label, value">
                                         <h:outputText value="School_Name: " />
-                                        <h:outputText value="#{updateController.studentBean.schoolName}" styleClass="outputLabel"/>
+                                        <h:outputText value="#{updateController.studentBean.school}" styleClass="outputLabel"/>
 
                                         <h:outputText value="End_Year: " />
                                         <h:outputText value="#{updateController.studentBean.endYear}" styleClass="outputLabel"/>
 
                                         <h:outputText value="SAT_Score: " />
-                                        <h:outputText value="#{updateController.studentBean.SAT}" styleClass="outputLabel"/>
+                                        <h:outputText value="#{updateController.studentBean.sat}" styleClass="outputLabel"/>
 
                                         <h:outputText value="PSAT_Score: " />
-                                        <h:outputText value="#{updateController.studentBean.PSAT}" styleClass="outputLabel"/>
+                                        <h:outputText value="#{updateController.studentBean.psat}" styleClass="outputLabel"/>
 
                                         <h:outputText value="ACT: " />
-                                        <h:outputText value="#{updateController.studentBean.ACT}" styleClass="outputLabel"/>
+                                        <h:outputText value="#{updateController.studentBean.act}" styleClass="outputLabel"/>
 
                                         <h:outputText value="Certifications: " />
                                         <h:outputText value="#{updateController.studentBean.certification}" styleClass="outputLabel"/>
@@ -159,13 +159,13 @@
                                         <h:outputText value="#{updateController.studentBean.hobbies}" styleClass="outputLabel"/>
 
                                         <h:outputText value="Essay_Of_Choice: " />
-                                        <h:outputText value="#{updateController.studentBean.essayOfChoice}" styleClass="outputLabel"/>
+                                        <h:outputText value="#{updateController.studentBean.essay}" styleClass="outputLabel"/>
 
                                         <h:outputText value="Universities_Of_Choice: " />
-                                        <h:outputText value="#{updateController.studentBean.universitiesOfChoice}" styleClass="outputLabel"/>
+                                        <h:outputText value="Not Implemented" styleClass="outputLabel"/>
 
                                         <h:outputText value="Majors_Of_Choice: " />
-                                        <h:outputText value="#{updateController.studentBean.majorsOfChoice}" styleClass="outputLabel"/>
+                                        <h:outputText value="Not Implemented" styleClass="outputLabel"/>
                                     </h:panelGrid>
                                 </h:panelGrid>
 
