--- a/web/harvard.xhtml
+++ b/web/harvard.xhtml
@@ -43,9 +43,14 @@
                                     and Boston, Massachusetts, has an enrollment of over 20,000 degree candidates, including undergraduate, 
                                     graduate, and professional students. Harvard has more than 360,000 alumni around the world.</p>
                                 <br/>
-
-                                <h:commandButton id="info" style="width: 98%" class="btn btn-primary" value="Schedule a visit"/> &nbsp;
-                                <h:commandButton id="admission" style="width: 98%" class="btn btn-primary" value="Apply for Admission" action="#"/>                       
+                                <div class="row">
+                                    <div class="col-lg-6 col-md-6 col-sm-6">
+                                        <h:commandButton id="info" style="width: 98%" class="btn btn-primary" value="Schedule a visit"/> &nbsp;
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-6">
+                                        <h:commandButton id="admission" style="width: 98%" class="btn btn-primary" value="Apply for Admission" action="#"/>                       
+                                    </div>
+                                </div>
                             </h:form>
 
                         </div>
