--- a/web/uiuc.xhtml
+++ b/web/uiuc.xhtml
@@ -44,9 +44,14 @@
                                     classroom, are designed to produce alumni who desire to make a significant, societal 
                                     impact.</p>
                                 <br/>
-
-                                <h:commandButton id="info" style="width: 98%" class="btn btn-primary" value="Schedule a visit"/> &nbsp;
-                                <h:commandButton id="admission" style="width: 98%" class="btn btn-primary" value="Apply for Admission" action="#"/>                       
+                                <div class="row">
+                                    <div class="col-lg-6 col-md-6 col-sm-6">
+                                        <h:commandButton id="info" style="width: 98%" class="btn btn-primary" value="Schedule a visit"/> &nbsp;
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-6">
+                                        <h:commandButton id="admission" style="width: 98%" class="btn btn-primary" value="Apply for Admission" action="#"/>                       
+                                    </div>
+                                </div>
                             </h:form>
 
                         </div>
