--- a/web/isu.xhtml
+++ b/web/isu.xhtml
@@ -40,9 +40,14 @@
                                 <p style="text-align: center; font-size: 20px">A great college town that can also jump-start your career - 
                                     <br/>that's Bloomington-Normal.</p>
                                 <br/>
-
-                                <h:commandButton id="info" style="width: 98%" class="btn btn-primary" value="Schedule a visit"/> &nbsp;
-                                <h:commandButton id="admission" style="width: 98%" class="btn btn-primary" value="Apply for Admission" action="#"/>                       
+                                <div class="row">
+                                    <div class="col-lg-6 col-md-6 col-sm-6">
+                                        <h:commandButton id="info" style="width: 98%" class="btn btn-primary" value="Schedule a visit"/> &nbsp;
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-6">
+                                        <h:commandButton id="admission" style="width: 98%" class="btn btn-primary" value="Apply for Admission" action="#"/>                       
+                                    </div>
+                                </div>
                             </h:form>
 
                         </div>
