--- a/web/princeton.xhtml
+++ b/web/princeton.xhtml
@@ -41,9 +41,14 @@
                                     longstanding commitment to service, reflected in Princeton’s informal motto 
                                     — Princeton in the nation’s service and the service of humanity — and exemplified 
                                     by the extraordinary contributions that Princetonians make to society<br/></p>
-
-                                <h:commandButton id="info" style="width: 98%" class="btn btn-primary" value="Schedule a visit"/> &nbsp;
-                                <h:commandButton id="admission" style="width: 98%" class="btn btn-primary" value="Apply for Admission" action="#"/>                       
+                                <div class="row">
+                                    <div class="col-lg-6 col-md-6 col-sm-6">
+                                        <h:commandButton id="info" style="width: 98%" class="btn btn-primary" value="Schedule a visit"/> &nbsp;
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-6">
+                                        <h:commandButton id="admission" style="width: 98%" class="btn btn-primary" value="Apply for Admission" action="#"/>                       
+                                    </div>
+                                </div>
                             </h:form>
 
                         </div>
