--- a/web/uic.xhtml
+++ b/web/uic.xhtml
@@ -43,10 +43,14 @@
                                     at Chicago is an acclaimed research institution with 15 colleges dedicated 
                                     to the discovery and distribution of knowledge.</p>
                                 <br/>
-
-                                <h:commandButton id="info" style="width: 98%" class="btn btn-primary" value="Schedule a visit"/> &nbsp;
-                               <br/> 
-                               <h:commandButton id="admission" style="width: 98%" class="btn btn-primary" value="Apply for Admission" action="#"/>                       
+                                <div class="row">
+                                    <div class="col-lg-6 col-md-6 col-sm-6">
+                                        <h:commandButton id="info" style="width: 98%" class="btn btn-primary" value="Schedule a visit"/> &nbsp;
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-6">
+                                        <h:commandButton id="admission" style="width: 98%" class="btn btn-primary" value="Apply for Admission" action="#"/>                       
+                                    </div>
+                                </div>
                             </h:form>
 
                         </div>
