Forget Password Working, Signup bug - creating empty profile when user is created fixed, Logout bugfix

--- a/web/resetPassword.xhtml
+++ b/web/resetPassword.xhtml
@@ -13,7 +13,7 @@
         <div class="grid">
             <header>
                 <h1>LinkedU</h1>
-                <br/> <h:outputText value="Wecome #{loginController.theModel.userId}"/>
+                <br/> <h:outputText value="Wecome #{passwordResetController.targetUser.firstName}"/>
                    
             </header>
             <article>
@@ -26,14 +26,13 @@
                         <h:form id="loginForm"> 
                             <p:messages id="messages" showDetail="true" autoUpdate="true" /> 
                             <p:password pt:placeholder="Enter Password" class="span-full" id="inlineFeedback" 
-                                        value="#{profileController.theModel.password}" 
+                                        value="#{passwordResetController.targetUser.password}" 
                                         feedback="true" inline="true" match="password2" required="true"/>
                             
                             <p:password pt:placeholder="Confirm Password" class="span-full Confirm" id="password2" 
-                                        value="#{profileController.theModel.password}" 
+                                        value="#{passwordResetController.targetUser.password}" 
                                         required="true" />
-                            <h:commandButton value="Submit" class="span-full" id="forgotPassword-login" 
-                                             action="#{profileController.resetPassword(loginController.theModel.userId)}"></h:commandButton>
+                            <h:commandButton value="Submit" class="span-full" id="forgotPassword-login" action="#{passwordResetController.updateUser()}"></h:commandButton>
                         </h:form>   
                     </div>
                 </div>
