--- a/web/logIn.xhtml
+++ b/web/logIn.xhtml
@@ -54,7 +54,7 @@
                                 <div class="col-md-12 control">
                                     <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
                                         Forgot Password! 
-                                        <a href="#">
+                                        <a href="forgotPassword.xhtml?redirect=true">
                                             Click Here
                                         </a>
                                     </div>
