--- a/web/SearchResults.xhtml
+++ b/web/SearchResults.xhtml
@@ -2,13 +2,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>search results</title>
     </h:head>
     <h:body>
         <p:dataList value="#{searchController.results}" var="user" >
-            #{user.toString()}
+            <p:link outcome="profile" value="#{user.toString}">
+                <f:param name="aUser" value="#{user}" />
+            </p:link>
+            <p:commandLink value="Submit" action="#{mediaController.}">
+                <f:setPropertyActionListener target="#{mediaController.setTargetUser(user)}" value="#{user}" />
+            </p:commandLink>
         </p:dataList>
     </h:body>
 </html>
