--- a/web/details.xhtml
+++ b/web/details.xhtml
@@ -5,7 +5,12 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title></title>
-        <h:outputStylesheet library="css" name="signup.css"/>   
+        <h:outputStylesheet library="css" name="signup.css"/> 
+         <style>
+            body{
+                background : url('resources/images/ISU.jpg')  no-repeat 0px 0px;
+            }
+         </style>
     </h:head>
 
     <h:body>
