--- a/web/update.xhtml
+++ b/web/update.xhtml
@@ -6,7 +6,12 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title></title>
-        <h:outputStylesheet library="css" name="signup.css"/>   
+        <h:outputStylesheet library="css" name="signup.css"/>  
+        <style>
+            body{
+                background : url('resources/images/ISU.jpg')  no-repeat 0px 0px;
+            }
+         </style>
     </h:head>
 
     <h:body>
