--- a/web/recruiterDetails.xhtml
+++ b/web/recruiterDetails.xhtml
@@ -52,12 +52,7 @@
                                     </h:inputText>   
                                     <h:message for="number" style="color:red" />
                                 </div>
-
-                                <h:commandButton id="signUp" style="width: 98%" class="btn btn-primary" value="Create Account" action="#{signupController.createUser()}"/> &nbsp;
-                            </h:form>
-
-                            <h:form>
-                                <h:commandButton id="login" style="width: 98%" class="btn btn-primary" value="LogIn" action="logIn.xhtml"/>                       
+                                <h:commandButton id="createAccount" style="width: 98%" class="btn btn-primary" value="Submit"/>                       
                             </h:form>
 
                         </div>
