--- a/web/profile.xhtml
+++ b/web/profile.xhtml
@@ -102,7 +102,7 @@
                     <h:commandButton  id="home" class="sidebarbutton" action="signUp?faces-redirect=true" value="Home" ></h:commandButton>
                     <br/>
                     <br/>
-                    <h:commandButton  id="search" class="sidebarbutton" action="searchResults?faces-redirect=true" value="Search" ></h:commandButton>
+                    <h:commandButton  id="upload" class="sidebarbutton" action="upload.xhtml?faces-redirect=true" value="Upload" ></h:commandButton>
                     <br/>
                     <br/>
                     <h:commandButton  id="feed" class="sidebarbutton" action="feed?faces-redirect=true" value="Feed" ></h:commandButton>
