Request email button

--- a/web/profileStudent.xhtml
+++ b/web/profileStudent.xhtml
@@ -169,7 +169,7 @@
                 <h:outputText value="#{profileController.hobbies}"></h:outputText>
                 <br/>
                 <br/>
-                <h:commandButton class="sidebarbutton" value="Request More Details"> </h:commandButton>   
+                <h:commandButton class="sidebarbutton" action="#{profileController.sendInfoEmail()}" value="Request More Details"> </h:commandButton>   
             </aside2>
             <footer>LINKEDU LLC. Created By Eric, Akankshaw, Dryden and Ricky</footer>
         </div>
