--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -97,9 +97,9 @@
                                     <div class="form-group">
                                         <div class="col-md-12 control">
                                             <div class="col-md-8" style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
-                                                Don't have an Account! 
+                                                Don't have an Account? 
                                                 <a href="signUp.xhtml">
-                                                    SignUp Here
+                                                    Sign Up Here
                                                 </a>
                                             </div>
 
