--- a/web/linkEmailed.xhtml
+++ b/web/linkEmailed.xhtml
@@ -17,7 +17,7 @@
                 <div class="box-login">
                     <div class="box-login-title">
                         <h:form>
-                        <h1>Thankyou! The email has been sent to your registerd email address.</h1>
+                        <h1>Thank you! The email has been sent to your registered email address.</h1>
                     
                   <h:commandButton value="Back to LogIn Page" class="span-full" id="forgotPassword-successfull" 
                                              action="logIn.xhtml"></h:commandButton>
