request info button changes

--- a/web/profileStudentFriend.xhtml
+++ b/web/profileStudentFriend.xhtml
@@ -124,7 +124,8 @@
                 </h:form>
             </aside>
             <aside2>
-                <h3> 
+                <h:form id="infoSidebar">
+                    <h3> 
                 <h:outputText value="#{profileController.userName}"></h:outputText>
                 's Detailed Info</h3>
                 <br/>
@@ -169,7 +170,8 @@
                 <h:outputText value="#{profileController.hobbies}"></h:outputText>
                 <br/>
                 <br/>
-                <h:commandButton class="sidebarbutton" value="Request More Details"> </h:commandButton>   
+                <h:commandButton id="emailButton" class="sidebarbutton" action="#{profileController.sendInfoEmail()}" value="Request More Details" onclick="document.getElementById(infoSidebar:emailButton).disabled.true"></h:commandButton>
+                </h:form>
             </aside2>
             <footer>LINKEDU LLC. Created By Eric, Akankshaw, Dryden and Ricky</footer>
         </div>
